# interactive_portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: create_release.yml  create_tag.yml  open_pr.yml  pulls.yml  tag.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  tox.ini
backend/backend/: settings.py  urls.py
backend/main/: models.py  views.py
backend/main/migrations/: 0001_initial.py
backend/myapp/: settings.py  urls.py
backend/myapp/apicrud/: admin.py  models.py  permissions.py  requirements.txt  serializers.py  urls.py  views.py
backend/myapp/apicrud/migrations/: 0001_initial.py  0002_achievements.py
backend/myapp/tests/: test_main.py  tests.py
backend/portfolio/: pyvenv.cfg
backend/templates/: acc_active_email.html
front-end/: Dockerfile  package-lock.json  package.json
front-end/public/: index.html
front-end/src/: index.js
front-end/src/components/: About.js  Achievements.js  AddMusicForm.js  AdminPage.js  AllMusics.js  App.js  AudioPlayer.js  AuthContext.js  Footer.js  Home.js  Login.js  MostLiked.js  Music.js  MusicCard.js  MusicPlayer.js  Musics.js  NavLink.js  Navbar.js  NotFound.js  PrivateRoute.js  Register.js  Skills.js
nginx/: nginx.conf
